fixed card image sizing, padding, and card alignment.

--- a/style.css
+++ b/style.css
@@ -76,16 +76,20 @@
 }
 
 /* Item Cards */
+.card-container {
+    justify-items: center;
+}
+
 .item-card {
     padding: 35px 15px 35px 15px;
     width: 800px;
-    height: 350px;
+    height: 370px;
     background-color: #2d82b7;
     box-shadow: 2px 2px 4px #4444;
     border-radius: 45px;
     display: flex;
     justify-content: center;
-    margin: 0px 20px 20px 40px;
+    margin: 0px 20px 20px 0px;
     h3 {
         margin: 20px;
     }
@@ -94,6 +98,7 @@
 /* Card Content */
 .card-img img {
     width: 350px;
+    height: 360px;
     display: inline-block;
     margin-right: 40px;
     border-radius: 40px;
@@ -153,7 +158,7 @@
         padding: 35px 10px 5px 10px;
         width: 400px;
         height: 200px;
-        margin: 20px 15px 15px 20px;
+        margin: 0px 15px 15px 0px;
         h3 {
             margin: 15px;
         }
